fixed spacing

--- a/vue-project/src/index.css
+++ b/vue-project/src/index.css
@@ -1,4 +1,3 @@
-
 #body-container {
     display: flex;
     flex-direction: column;
@@ -82,6 +81,10 @@
 
 #new-button {
     margin-left: .5rem;
+}
+
+#new-button:hover {
+    background-color: rgb(248, 133, 87);
 }
 
 #enabled {
